# auth

./: .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
scripts/: backup.sh  entrypoint.sh  update.sh
src/apps/auth_idp/: IdpServer.cpp  RegisterEndpoint.h
src/apps/auth_idp/database/: cleanup.sql  schema.sql  seed.sql
src/auth/: AuthMiddleware.cpp  AuthMiddleware.h  FederatedLoginProvider.h  HttpEncode.h  JwtAuthMiddleware.h  JwtSigner.cpp  JwtSigner.h  JwtVerifier.cpp  JwtVerifier.h  OAuth2CallbackHandler.h  PasswordHasher.h  QrCodeGenerator.cpp  QrCodeGenerator.h  RateLimiter.h  SecretEncryptor.h  Totp.cpp  Totp.h  UserContext.cpp  UserContext.h
src/database/sqlite/: SqliteDatabase.cpp  SqliteDatabase.h
src/supplement/qrcodegen/: LICENSE
